fix: adjust grid gap in pricing cards and enhance custom solutions section layout

--- a/components/Pricing/Pricing.module.css
+++ b/components/Pricing/Pricing.module.css
@@ -6,7 +6,7 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: var(--s16);
+  gap: var(--s8);
   max-width: 600px;
   margin: var(--s40) auto 0 auto;
 }
@@ -92,8 +92,16 @@
   align-items: center;
   gap: var(--s12);
   max-width: 600px;
-  margin: var(--s24) auto 0 auto;
-  padding: 0 var(--s4);
+  margin: auto;
+  justify-content: center;
+  padding: var(--s32) var(--s32);
+  background-color: #f3f4f5;
+  margin-top: var(--s8);
+  border-radius: var(--s24);
+}
+
+:global(html.dark) .custom {
+  background-color: #292929;
 }
 
 .customIcon {
@@ -128,4 +136,12 @@
   .price {
     font-size: var(--s36);
   }
+}
+
+.contact {
+  text-decoration: none;
+}
+
+.contact:hover {
+  text-decoration: underline;
 }
